// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`relative time renders hours as expected 1`] = `
<p
  className="RelativeTime RelativeTime--post"
>
  2h
</p>
`;

exports[`relative time renders minutes as expected 1`] = `
<p
  className="RelativeTime RelativeTime--post"
>
  1m
</p>
`;

exports[`relative time renders seconds as expected 1`] = `
<p
  className="RelativeTime RelativeTime--post"
>
  10s
</p>
`;

exports[`relative time renders years as expected 1`] = `
<p
  className="RelativeTime RelativeTime--post"
>
  Dec 18, 2018
</p>
`;
